fixed speech mark that's too low

--- a/_sass/_sponsor.scss
+++ b/_sass/_sponsor.scss
@@ -274,7 +274,7 @@ $dark-purple: #220021;
                         font-size: 2em;
                         font-weight: 400;
                         position: absolute;
-                        top: 0;
+                        top: -0.5em;
                         left: -0.5em;
                     }
                 }
